<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wear basics</string>
    <string name="activity_main_snotification_button">A simple notification</string>
    <string name="activity_main_acnotification_button">An enriched notification with an action</string>
    <string name="activity_main_pgnotification_button">An enriched notification paged</string>
    <string name="activity_main_stcknotification_button">An enriched notification stacked</string>
    <string name="activity_main_voicenotification_button">An enriched notification with voice input</string>



    <string name="recipe1">Ingredients:\n\n\n- 1/2 cup water\n\n- 1/4 tea spoon salt\n\n- 3/4 cup white sugar\n\n- 18 (1 ounce) squares bittersweet chocolate\n\n- 1 cup unsalted butter\n\n- 6 eggs\n\nDirections\n\n1. Preheat oven to 300 degrees F (150 degrees C). Grease one 10 inch round cake pan and set aside.\n\n2. In a small saucepan over medium heat combine the water, salt and sugar. Stir until completely dissolved and set aside.\n\n3. Either in the top half of a double boiler or in a microwave oven melt the bittersweet chocolate. Pour the chocolate into the bowl of an electric mixer.\n\n4. Cut the butter into pieces and beat the butter into the chocolate, 1 piece at a time. Beat in the hot sugar-water. Slowly beat in the eggs, one at a time.\n\n5. Pour the batter into the prepared pan. Have a pan larger than the cake pan ready, put the cake pan in the larger pan and fill the pan with boiling water halfway up the sides of the cake pan.\n\n6. Bake cake in the water bath at 300 degrees F (150 degrees C) for 45 minutes. The center will still look wet. Chill cake overnight in the pan. To unmold, dip the bottom of the cake pan in hot water for 10 seconds and invert onto a serving plate.</string>
    <string name="recipe2">Ingredients\n\n\n- 4 eggs\n\n- 1 1/4 cups vegetable oil\n\n- 2 cups white sugar\n\n- 2 teaspoons vanilla extract\n\n- 2 cups all-purpose flour\n\n- 2 teaspoons baking soda\n\n- 2 teaspoons baking powder\n\n- 1/2 teaspoon salt\n\n- 2 teaspoons ground cinnamon\n\n- 3 cups grated carrots\n\n- 1 cup chopped pecans\n\n- 1/2 cup butter, softened\n\n- 8 ounces cream cheese, softened\n\n- 4 cups confectioners sugar\n\n- 1 teaspoon vanilla extract\n\n- 1 cup chopped pecans\n\nDirections\n\n\n- Preheat oven to 350 degrees F (175 degrees C). Grease and flour a 9x13 inch pan.\n\n\n- In a large bowl, beat together eggs, oil, white sugar and 2 teaspoons vanilla. Mix in flour, baking soda, baking powder, salt and cinnamon.\n\n\n- Stir in carrots. Fold in pecans. Pour into prepared pan.\n\n\n- Bake in the preheated oven for 40 to 50 minutes, or until a toothpick inserted into the center of the cake comes out clean. Let cool in pan for - 10 minutes, then turn out onto a wire rack and cool completely.\n\n\n- To Make Frosting: In a medium bowl, combine butter, cream cheese, confectioners sugar and 1 teaspoon vanilla. Beat until the mixture is smooth and creamy. Stir in chopped pecans. Frost the cooled cake.</string>

</resources>
