<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:clipToPadding="false"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="Enriched notifications"
            style="@style/WearBasicsHeaderTextView"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_snotification_button"
            android:onClick="showBasicNotification"
            style="@style/WearBasicsButton"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_acnotification_button"
            android:onClick="showEnrichedNotification"
            style="@style/WearBasicsButton"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_pgnotification_button"
            android:onClick="showEnrichedPagedNotification"
            style="@style/WearBasicsButton"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_stcknotification_button"
            android:onClick="showStackedNotification"
            style="@style/WearBasicsButton"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_voicenotification_button"
            android:onClick="showVoiceInputNotification"
            style="@style/WearBasicsButton"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="Talking with wear"
            style="@style/WearBasicsHeaderTextView"
            />

    </LinearLayout>
</ScrollView>
